<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp">

    <TextView
        android:id="@+id/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_main_12"
        android:text="@string/text_view_name"
        android:textColor="@color/purple_dark"
        android:textSize="@dimen/text_size_normal_18"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_main_12"
        android:text="@string/text_view_date"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_medium_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_main_12"
        android:maxLines="4"
        android:text="@string/text_view_description"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOdgovori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_main_12"
        android:text="@string/text_view_reply"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_medium_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonReply"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <ImageView
        android:id="@+id/buttonReply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_main_12"
        android:src="@drawable/ic_reply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/dislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_main_12"
        android:text="@string/text_view_number_dislike"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium_14"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dislikeCircle"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <TextView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_main_12"
        android:text="@string/text_view_number_like"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_medium_14"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/likeCircle"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <ImageView
        android:id="@+id/dislikeCircle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/margin_main_12"
        android:background="@drawable/button_circle_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewDislike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dislike"
        app:layout_constraintBottom_toBottomOf="@+id/dislikeCircle"
        app:layout_constraintEnd_toEndOf="@+id/dislikeCircle"
        app:layout_constraintStart_toStartOf="@+id/dislikeCircle"
        app:layout_constraintTop_toTopOf="@+id/dislikeCircle"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/likeCircle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/margin_main_12"
        android:background="@drawable/button_circle_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dislike"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageViewLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="@+id/likeCircle"
        app:layout_constraintEnd_toEndOf="@+id/likeCircle"
        app:layout_constraintStart_toStartOf="@+id/likeCircle"
        app:layout_constraintTop_toTopOf="@+id/likeCircle"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>