<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_main_12"
    android:layout_marginBottom="@dimen/margin_main_12">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_main_12"
        android:text="@string/text_view_comments"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_big_22"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/commentCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/text_view_number_comment"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_big_22"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textViewTitle"
        app:layout_constraintTop_toTopOf="@+id/textViewTitle" />

    <View
        android:id="@+id/viewColor"
        android:layout_width="85dp"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_small_8"
        android:background="@color/purple"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <View
        android:id="@+id/viewGray"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="@dimen/margin_main_12"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@id/viewColor" />

    <TextView
        android:id="@+id/obavestenje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_big_16"
        android:text="@string/text_view_empty_top_comments"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_big_22"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewGray" />

</androidx.constraintlayout.widget.ConstraintLayout>