<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="440dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_main_12"
        android:layout_marginEnd="@dimen/margin_small_8"
        android:maxLines="3"
        android:text="@string/text_view_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_big_22"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewCategory"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_main_12"
        android:text="@string/text_view_category"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_small_12"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small_8"
        android:text="@string/text_view_date"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_small_12"
        app:layout_constraintStart_toEndOf="@+id/textViewCategory"
        app:layout_constraintTop_toTopOf="@+id/textViewCategory" />

    <View
        android:id="@+id/View"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/margin_main_12"
        android:layout_marginTop="@dimen/margin_main_12"
        android:layout_marginRight="@dimen/margin_main_12"
        android:background="@color/gray_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCategory" />

    <ImageView
        android:id="@+id/unSave"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/margin_small_6"
        android:padding="3dp"
        android:src="@drawable/ic_un_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/purple"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>