<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_margin="@dimen/margin_main_12"
        android:foreground="@drawable/dark_transparent_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,UnusedAttribute" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_big_16"
        android:layout_marginBottom="10dp"
        android:maxLines="3"
        android:text="@string/text_view_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewCategory" />

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_main_12"
        android:text="@string/text_view_category"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small_12"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_main_12"
        android:text="@string/text_view_date"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small_12"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCategory"
        app:layout_constraintStart_toEndOf="@+id/textViewCategory" />

    <ImageView
        android:id="@+id/imageViewPlay"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/ic_playbutton"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/unSave"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/margin_main_12"
        android:padding="6dp"
        android:src="@drawable/ic_un_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>